--- a/src/components/KlientoHero.astro
+++ b/src/components/KlientoHero.astro
@@ -3,10 +3,8 @@
     <h1
       class="text-3xl sm:text-5xl md:text-6xl lg:text-7xl text-white font-bold text-center leading-tight"
     >
-      Connect to external servers <br />from <span
-        class="bg-gradient-to-r from-indigo-500 from-10% via-indigo-400 via-30% to-indigo-200 to-90% bg-clip-text text-transparent border border-white px-4 rounded-md"
-        >AWS</span
-      > without API keys
+      Workload authentication <br />made simple
     </h1>
+    <p class="mt-8 text-center text-xl">Without secrets to protect or tokens to verify remotely.</p>
   </div>
 </section>
