Enhance KlientoHero and Usage components for better clarity and integration

--- a/src/components/KlientoHero.astro
+++ b/src/components/KlientoHero.astro
@@ -3,7 +3,11 @@
     <h1
       class="text-3xl sm:text-5xl md:text-6xl lg:text-7xl text-white font-bold text-center leading-tight"
     >
-      Workload authentication <br />made simple
+      <span
+        class="bg-gradient-to-r from-indigo-600 via-indigo-400 to-indigo-200 text-transparent bg-clip-text"
+        >Workload authentication</span
+      >
+      <br />made simple
     </h1>
     <p class="mt-8 text-center text-xl">Without secrets to protect or tokens to verify remotely.</p>
   </div>
