--- a/src/components/KlientoHomepage/Usage.astro
+++ b/src/components/KlientoHomepage/Usage.astro
@@ -20,28 +20,15 @@ const features = [
 <section class="bg-neutral-900 py-16">
   <div class="max-w-5xl mx-auto items-center justify-center text-center px-6 space-y-8">
     <h2 class="text-2xl md:text-5xl text-white font-bold">Client integration</h2>
+    <p class="text-sm md:text-lg mb-8 max-w-4xl mx-auto">
+      Leverage your existing workflow identity to obtain Kliento token bundles from <a
+        href="https://veraid.org"
+        class="text-indigo-400!">VeraId Authority</a
+      >.
+    </p>
     <TabbedCodeSnippet
       client:load
       tabs={[
-        {
-          label: "GitHub Action",
-          language: "yaml",
-          code: `jobs:
-  authentication:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Get Kliento token bundle
-        id: token-bundle
-        uses: CheVeraId/authority-credentials-action@v1
-        with:
-          exchange-endpoint: https://veraid-authority.example/credentials/123
-      - name: Use token bundle
-        run: curl -H "Authorization: Kliento \${TOKEN_BUNDLE}" https://api.example.com
-        environment:
-          TOKEN_BUNDLE: \${{ steps.token-bundle.outputs.credential }}`,
-        },
-
         {
           label: "JavaScript",
           language: "javascript",
@@ -61,6 +48,24 @@ export async function authFetch(request: Request) {
 }`,
         },
         {
+          label: "GitHub Action",
+          language: "yaml",
+          code: `jobs:
+  authentication:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Get Kliento token bundle
+        id: token-bundle
+        uses: CheVeraId/authority-credentials-action@v1
+        with:
+          exchange-endpoint: https://veraid-authority.example/credentials/123
+      - name: Use token bundle
+        run: curl -H "Authorization: Kliento \${TOKEN_BUNDLE}" https://api.example.com
+        environment:
+          TOKEN_BUNDLE: \${{ steps.token-bundle.outputs.credential }}`,
+        },
+        {
           label: "Others",
           language: "python",
           code: `Other languages coming soon`,
@@ -75,7 +80,10 @@ export async function authFetch(request: Request) {
 <section class="bg-black py-16">
   <div class="max-w-5xl mx-auto items-center justify-center text-center px-6 space-y-8">
     <h2 class="text-2xl md:text-5xl text-white font-bold">Server-side verification</h2>
-    <p class="text-sm md:text-lg mb-8">Verify credentials in your server-side code.</p>
+    <p class="text-sm md:text-lg mb-8">
+      Servers verify tokens by making a call to a local function provided by a Kliento SDK, or
+      offload the verification to a stateless, cloud-agnostic open source server.
+    </p>
     <TabbedCodeSnippet
       client:load
       tabs={[
@@ -111,5 +119,12 @@ async function verifyTokenBundle(authHeaderValue: string) {
       Kliento compared to others
     </h2>
     <ComparisonTable features={features} />
+    <div class="flex justify-center">
+      <CtaButton
+        href="/"
+        text="See how Kliento compares to its alternatives"
+        variant="primaryKliento"
+      />
+    </div>
   </div>
 </section>
