--- a/src/pages/kliento/index.astro
+++ b/src/pages/kliento/index.astro
@@ -4,10 +4,12 @@ import Skeleton from "../../layouts/Skeleton.astro";
 import klientoLogo from "../../assets/images/kliento-logo.png";
 import KlientoHero from "../../components/KlientoHero.astro";
 import Usage from "../../components/KlientoHomepage/Usage.astro";
+import CtaBanner from "../../components/CtaBanner.astro";
 ---
 
 <Skeleton title="Kliento" description="Kliento" showBrandInTitle={false}>
   <SecondaryNav client:load servicePath="/kliento" logoSrc={klientoLogo.src} />
   <KlientoHero />
   <Usage />
+  <CtaBanner />
 </Skeleton>
