--- a/src/components/KlientoHomepage/Credentials.astro
+++ b/src/components/KlientoHomepage/Credentials.astro
@@ -3,20 +3,21 @@ import placeholder from "../../assets/images/placeholder.png";
 import CtaButton from "../CtaButton.astro";
 ---
 
-<section class="bg-neutral-800 py-16">
+<section class="py-16">
   <div class="mx-auto max-w-6xl">
-    <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 md:gap-8 items-center">
+    <div class="grid grid-cols-1 lg:grid-cols-2 gap-16 items-center">
       <div class="order-2 lg:order-1">
         <div class="flex justify-center items-center">
           <img src={placeholder.src} alt="Founder" />
         </div>
       </div>
 
-      <div class="text-left order-1 lg:order-2 space-y-6 &div:p text-base">
+      <div class="text-left order-1 lg:order-2 space-y-6 text-base">
         <h2 class="text-2xl md:text-5xl text-white font-bold">
           Kliento credentials are <span
             class="bg-gradient-to-r from-indigo-600 via-indigo-400 to-indigo-200 text-transparent bg-clip-text"
-            >self-contained</span>
+            >self-contained</span
+          >
         </h2>
         <p>
           Kliento is powered by VeraId, a DNSSEC-powered authentication protocol that attributes
