--- a/src/pages/kliento/index.astro
+++ b/src/pages/kliento/index.astro
@@ -6,12 +6,16 @@ import KlientoHero from "../../components/KlientoHero.astro";
 import Usage from "../../components/KlientoHomepage/Usage.astro";
 import CtaBanner from "../../components/CtaBanner.astro";
 import Credentials from "../../components/KlientoHomepage/Credentials.astro";
+import ServicesAccount from "../../components/KlientoHomepage/ServicesAccount.astro";
+import Comparison from "../../components/KlientoHomepage/Comparison.astro";
 ---
 
 <Skeleton title="Kliento" description="Kliento" showBrandInTitle={false}>
   <SecondaryNav client:load servicePath="/kliento" logoSrc={klientoLogo.src} />
   <KlientoHero />
+  <ServicesAccount />
   <Credentials />
   <Usage />
+  <Comparison />
   <CtaBanner />
 </Skeleton>
