Refactor KlientoHomepage components for improved layout and styling

--- a/src/components/KlientoHomepage/ServicesAccount.astro
+++ b/src/components/KlientoHomepage/ServicesAccount.astro
@@ -1,13 +1,10 @@
----
-import placeholder from "../../assets/images/placeholder.png";
-import CtaButton from "../CtaButton.astro";
----
-
-<section class="bg-neutral-800 py-16">
-  <div class="mx-auto max-w-6xl px-6">
-    <div class="grid grid-cols-1 lg:grid-cols-2 gap-16">
-      <div class="order-2 lg:order-1">
-        <h2 class="text-2xl md:text-5xl text-white font-bold">
+<section class="bg-neutral-800 py-10 lg:py-16">
+  <div class="mx-auto max-w-6xl px-4 lg:px-6">
+    <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 lg:gap-16">
+      <div class="order-1">
+        <h2
+          class="text-3xl sm:text-4xl md:text-5xl lg:text-[3.5rem] leading-tight text-white font-bold"
+        >
           Kliento brings <span
             class="bg-gradient-to-r from-indigo-600 via-indigo-400 to-indigo-200 text-transparent bg-clip-text"
             >service accounts</span
@@ -15,8 +12,8 @@ import CtaButton from "../CtaButton.astro";
         </h2>
       </div>
 
-      <div class="text-left order-1 lg:order-2 space-y-6 &div:p text-base">
-        <p class="text-xl">
+      <div class="text-left order-2 space-y-6 &div:p text-base">
+        <p class="text-md sm:text-lg md:text-xl">
           Think AWS roles, Azure managed identities, Kubernetes service accounts and GCP service
           accounts, but for the entire Internet.
         </p>
