--- a/src/components/CtaBanner.astro
+++ b/src/components/CtaBanner.astro
@@ -2,13 +2,13 @@
 import CtaButton from "./CtaButton.astro";
 ---
 
-<section class="bg-black py-16">
+<section class="py-8 lg:py-16 px-4 lg:px-6">
   <div
-    class="max-w-5xl mx-auto items-center justify-center text-center px-6 space-y-8 bg-neutral-800 py-16 rounded-3xl"
+    class="max-w-6xl mx-auto items-center justify-center text-center px-4 lg:px-6 space-y-8 bg-neutral-800 py-8 lg:py-16 rounded-3xl"
   >
-    <h2 class="text-2xl md:text-5xl text-white font-bold">Try it yourself!</h2>
-    <p class="text-sm md:text-lg mb-8">
-      Leverage your existing workflow identity to obtain Kliento token bundles from
+    <h2 class="text-3xl sm:text-4xl md:text-5xl lg:text-6xl">Try it yourself!</h2>
+    <p class="text-sm sm:text-base md:text-lg lg:text-xl mb-8">
+      You can run Kliento clients and servers on your own computer.
     </p>
     <CtaButton href="/" text="Try demo locally" variant="primaryKliento" />
   </div>
