--- a/src/components/KlientoHomepage/Credentials.astro
+++ b/src/components/KlientoHomepage/Credentials.astro
@@ -3,17 +3,17 @@ import placeholder from "../../assets/images/placeholder.png";
 import CtaButton from "../CtaButton.astro";
 ---
 
-<section class="py-16">
-  <div class="mx-auto max-w-6xl">
-    <div class="grid grid-cols-1 lg:grid-cols-2 gap-16 items-center">
+<section class="py-10 lg:py-16">
+  <div class="mx-auto max-w-6xl px-4 lg:px-6">
+    <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 lg:gap-16 items-center">
       <div class="order-2 lg:order-1">
         <div class="flex justify-center items-center">
           <img src={placeholder.src} alt="Founder" />
         </div>
       </div>
 
-      <div class="text-left order-1 lg:order-2 space-y-6 text-base">
-        <h2 class="text-2xl md:text-5xl text-white font-bold">
+      <div class="text-left order-1 lg:order-2 space-y-6 text-sm lg:text-base">
+        <h2 class="text-3xl sm:text-4xl md:text-5xl lg:text-[3.5rem] text-white font-bold">
           Kliento credentials are <span
             class="bg-gradient-to-r from-indigo-600 via-indigo-400 to-indigo-200 text-transparent bg-clip-text"
             >self-contained</span
