--- a/src/pages/kliento/index.astro
+++ b/src/pages/kliento/index.astro
@@ -2,7 +2,7 @@
 import { SecondaryNav } from "../../components/TopNav/SecondaryNav";
 import Skeleton from "../../layouts/Skeleton.astro";
 import klientoLogo from "../../assets/images/kliento-logo.png";
-import KlientoHero from "../../components/KlientoHero.astro";
+import Hero from "../../components/KlientoHomepage/Hero.astro";
 import Usage from "../../components/KlientoHomepage/Usage.astro";
 import CtaBanner from "../../components/CtaBanner.astro";
 import Credentials from "../../components/KlientoHomepage/Credentials.astro";
@@ -12,7 +12,7 @@ import Comparison from "../../components/KlientoHomepage/Comparison.astro";
 
 <Skeleton title="Kliento" description="Kliento" showBrandInTitle={false}>
   <SecondaryNav client:load servicePath="/kliento" logoSrc={klientoLogo.src} />
-  <KlientoHero />
+  <Hero />
   <ServicesAccount />
   <Credentials />
   <Usage />
