Refactor headings in Homepage and KlientoHomepage components for consistent styling
- Removed unnecessary text color classes

--- a/src/components/Homepage/Hero.astro
+++ b/src/components/Homepage/Hero.astro
@@ -15,7 +15,7 @@ import patternSvg from "../../assets/images/pattern.svg";
     </div>
     <div class="relative text-center">
       <h1
-        class="text-[2.1rem] sm:text-5xl md:text-7xl md:mb-8 mb-4 leading-tight bg-gradient-to-r from-[#01FD93] via-[#87FFCC] to-[#D9FFEF] text-transparent bg-clip-text"
+        class="text-[2.1rem] sm:text-5xl md:text-7xl md:mb-8 mb-4 leading-tight bg-gradient-to-r from-[#01FD93] via-[#87FFCC] to-[#D9FFEF] !text-transparent bg-clip-text"
       >
         Securely attribute content to domain names
       </h1>
