--- a/src/components/KlientoHomepage/Hero.astro
+++ b/src/components/KlientoHomepage/Hero.astro
@@ -1,8 +1,6 @@
 <section class="py-8 sm:py-16 bg-black">
   <div class="px-4 sm:px-6 mx-auto max-w-7xl space-y-4 lg:space-y-8">
-    <h1
-      class="text-[2.5rem] sm:text-5xl md:text-6xl lg:text-[5.5rem] text-white font-bold text-center leading-tight"
-    >
+    <h1 class="text-[2.5rem] sm:text-5xl md:text-6xl lg:text-[5.5rem] text-center leading-tight">
       <span
         class="bg-gradient-to-r from-indigo-600 via-indigo-400 to-indigo-200 text-transparent bg-clip-text"
         >Workload authentication</span
