--- a/src/layouts/Skeleton.astro
+++ b/src/layouts/Skeleton.astro
@@ -105,6 +105,7 @@ const ogUrl = new URL(Astro.url.pathname, siteUrl);
   h6 {
     font-family: "Chakra Petch", sans-serif;
     font-weight: 700;
+    color: #ffffff;
   }
   p a {
     color: #7af2a8;
