--- a/src/components/KlientoHomepage/Comparison.astro
+++ b/src/components/KlientoHomepage/Comparison.astro
@@ -18,7 +18,7 @@ const features = [
 
 <section class="py-8 lg:py-16 bg-neutral-900">
   <div class="max-w-5xl mx-auto items-center justify-center px-4 lg:px-6 space-y-6 lg:space-y-12">
-    <h2 class="text-3xl sm:text-4xl md:text-5xl lg:text-[3.5rem] text-white font-bold text-center">
+    <h2 class="text-3xl sm:text-4xl md:text-5xl lg:text-[3.5rem] text-center">
       Kliento compared to others
     </h2>
     <ComparisonTable features={features} />
