--- a/src/components/KlientoHomepage/Credentials.astro
+++ b/src/components/KlientoHomepage/Credentials.astro
@@ -13,7 +13,7 @@ import CtaButton from "../CtaButton.astro";
       </div>
 
       <div class="text-left order-1 lg:order-2 space-y-6 text-sm lg:text-base">
-        <h2 class="text-3xl sm:text-4xl md:text-5xl lg:text-[3.5rem] text-white font-bold">
+        <h2 class="text-3xl sm:text-4xl md:text-5xl lg:text-[3.5rem]">
           Kliento credentials are <span
             class="bg-gradient-to-r from-indigo-600 via-indigo-400 to-indigo-200 text-transparent bg-clip-text"
             >self-contained</span
