--- a/src/components/KlientoHomepage/ServicesAccount.astro
+++ b/src/components/KlientoHomepage/ServicesAccount.astro
@@ -2,9 +2,7 @@
   <div class="mx-auto max-w-6xl px-4 lg:px-6">
     <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 lg:gap-16">
       <div class="order-1">
-        <h2
-          class="text-3xl sm:text-4xl md:text-5xl lg:text-[3.5rem] leading-tight text-white font-bold"
-        >
+        <h2 class="text-3xl sm:text-4xl md:text-5xl lg:text-[3.5rem] leading-tight">
           Kliento brings <span
             class="bg-gradient-to-r from-indigo-600 via-indigo-400 to-indigo-200 text-transparent bg-clip-text"
             >service accounts</span
