--- a/src/components/KlientoHomepage/ComparisonTable.astro
+++ b/src/components/KlientoHomepage/ComparisonTable.astro
@@ -4,14 +4,19 @@ interface Feature {
   kliento: boolean;
   apiKeys: boolean;
   jwts: boolean;
-  spifee: boolean;
+  spiffe: boolean;
+}
+
+interface ColumnHeader {
+  name: string;
 }
 
 interface Props {
   features: Feature[];
+  columnHeaders: ColumnHeader[];
 }
 
-const { features } = Astro.props;
+const { features, columnHeaders } = Astro.props;
 
 const headerCellClass = "py-2 lg:py-3 px-4 text-center bg-neutral-700";
 const rowCellClass = "py-2 lg:py-3 px-4 text-center";
@@ -19,17 +24,17 @@ const checkmarkClass = "text-green-500";
 const crossClass = "text-red-500";
 ---
 
-<div class="overflow-hidden rounded-lg">
+<div>
   <table
     class="w-full border-collapse bg-neutral-900 text-white border-neutral-700 border-l-1 border-r-1"
   >
     <thead class="text-base font-normal">
       <tr class="border-b border-neutral-700">
-        <th class={headerCellClass + " text-left"}>Features</th>
-        <th class={headerCellClass + " bg-neutral-800"}>Kliento</th>
-        <th class={headerCellClass}>JWTs</th>
-        <th class={headerCellClass}>Opaque API keys</th>
-        <th class={headerCellClass}>SPIFEE</th>
+        <th class={headerCellClass + " text-left"}>{columnHeaders[0].name}</th>
+        <th class={headerCellClass + " bg-neutral-800"}>{columnHeaders[1].name}</th>
+        <th class={headerCellClass}>{columnHeaders[2].name}</th>
+        <th class={headerCellClass}>{columnHeaders[3].name}</th>
+        <th class={headerCellClass}>{columnHeaders[4].name}</th>
       </tr>
     </thead>
     <tbody>
@@ -59,7 +64,7 @@ const crossClass = "text-red-500";
               )}
             </td>
             <td class={rowCellClass}>
-              {feature.spifee ? (
+              {feature.spiffe ? (
                 <span class={checkmarkClass}>✓</span>
               ) : (
                 <span class={crossClass}>✗</span>
