Remove unnessesary file codetabs.astro

--- a/src/components/KlientoHomepage/ServerVerification.astro
+++ b/src/components/KlientoHomepage/ServerVerification.astro
@@ -1,5 +1,5 @@
 ---
-import TabbedCodeSnippet from "../CodeTabsReact.tsx";
+import TabbedCodeSnippet from "../CodeSnippet.tsx";
 import CtaButton from "../CtaButton.astro";
 ---
 
