--- a/src/components/KlientoHomepage/ServicesAccount.astro
+++ b/src/components/KlientoHomepage/ServicesAccount.astro
@@ -1,3 +1,7 @@
+---
+import VeraidIdentifier from "./VeraidIdentifier.astro";
+---
+
 <section class="bg-neutral-900 py-10 lg:py-16">
   <div class="mx-auto max-w-6xl px-4 lg:px-6">
     <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 lg:gap-16">
@@ -15,12 +19,7 @@
           Think AWS roles, Azure managed identities, Kubernetes service accounts and GCP service
           accounts, but for the entire Internet.
         </p>
-
-        <div class="flex justify-left mt-6">
-          <div class="bg-neutral-800 px-6 py-3 rounded border border-neutral-700">
-            <span class="font-mono text-white">wordpress@company.com</span>
-          </div>
-        </div>
+        <VeraidIdentifier />
       </div>
     </div>
   </div>
