--- a/src/components/KlientoHomepage/TokenBundle.astro
+++ b/src/components/KlientoHomepage/TokenBundle.astro
@@ -1,5 +1,5 @@
 ---
-import placeholder from "../../assets/images/placeholder.png";
+import tokenBundle from "../../assets/images/token-bundle.svg";
 import CtaButton from "../CtaButton.astro";
 ---
 
@@ -8,7 +8,7 @@ import CtaButton from "../CtaButton.astro";
     <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 lg:gap-16 items-center">
       <div class="order-2 lg:order-1">
         <div class="flex justify-center items-center">
-          <img src={placeholder.src} alt="Founder" />
+          <img src={tokenBundle.src} alt="Token bundle illustration" />
         </div>
       </div>
 
