--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,3 +8,6 @@ html {
 @theme {
   --text-xxs: 10px;
 }
+:not(pre) > code {
+  @apply bg-neutral-700 rounded-sm py-0.5 px-1 border border-neutral-600;
+}
