Update SVG icons for consistency in dimensions and styling

--- a/src/components/KlientoHomepage/VeraidIdentifier.astro
+++ b/src/components/KlientoHomepage/VeraidIdentifier.astro
@@ -11,7 +11,7 @@ const identifiers = [
 <div
   class="w-full h-[64px] overflow-hidden border-2 rounded-md border-neutral-700 bg-neutral-800 text-lg relative carousel-container"
 >
-  <div class="absolute top-0 left-0 w-full text-wrapper">
+  <div class="absolute top-0 left-0 w-full text-wrapper text-white">
     {
       identifiers.map((identifier) => (
         <div class="h-[64px] flex items-center justify-center px-4">{identifier}</div>
