--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -32,7 +32,7 @@ const currentYear = new Date().getFullYear();
         </a>
         <p class="text-sm">User- and developer-friendly authentication based on DNS.</p>
         <div
-          class="flex gap-4 [&>a]:text-neutral-400 [&>a]:hover:text-white [&>a]:transition-colors [&>a>div]:h-6 [&>a>div]:w-6"
+          class="flex gap-4 [&>a]:text-neutral-400 [&>a]:hover:text-white [&>a]:transition-colors [&>a>div]:h-6 [&>a>div]:w-6 [&>a>div>svg]:w-full [&>a>div>svg]:h-full"
         >
           <a href="https://x.com/CheVeraId">
             <div set:html={XIcon} />
